2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Dom/FoldingRegion.cs,
	  MonoDevelop.Projects.Dom/ParsedDocument.cs: Break the folding
	  regions into Folds and UserRegions. Fixes regression where regions
	  were no longer shown in the document outline and the quick finder.

2008-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectFile.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs,
	  md1format.xml: Read and store the SubType field. Fixes bugs #429241
	  and #429245.
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Don't try to read the completion db if it has already been
	  disposed.
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Cosmetic fixes.

2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Text/TextFile.cs: Fix incorrect g_convert
	  P/Invoke signature. Should fix "Bug 414144 - Cannot compile with MD
	  and LinearIL in x86_64 (MonoDevelop.Projects.Text.TextFile.Read
	  throw NRE exception)".

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomCecilMethod.cs,
	  MonoDevelop.Projects.Dom/DomCecilEvent.cs,
	  MonoDevelop.Projects.Dom/DomCecilField.cs,
	  MonoDevelop.Projects.Dom/DomCecilProperty.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/DomCecilAttribute.cs: Worked on cecil
	  layer/extension methods are now recognized.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: fixed anonymous type
	  bug.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Output/OutputFlags.cs,
	  MonoDevelop.Projects.Dom.Output/Ambience.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/IMethod.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,
	  MonoDevelop.Projects.Dom/IType.cs,