@@ -1,3 +1,11 @@
+2008-09-26  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Projects.Dom/DomCecilParameter.cs,
+	  MonoDevelop.Projects.Dom/DomCecilMethod.cs,
+	  MonoDevelop.Projects.Dom/DomReturnType.cs: fixed Bug 371569 -
+	  Refactor command 'implement interface' doesn't respect *ref* and
+	  *out* parameters.
+
 2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Projects.Dom/FoldingRegion.cs,
